Index file updated
Added index.js file to the index.html file so that the pageloaded event is triggered.

--- a/index.html
+++ b/index.html
@@ -276,5 +276,5 @@
 iframe { width: 800px; height: 520px; border: 1px solid black; }
 iframe { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; }
 </style>
-
+<script type="text/javascript" src="js/index.js"></script>
 </html>
