--- a/apicall.html
+++ b/apicall.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
-       function check(){
-
+    function check(){
+            // console.log(btoa("47bfd350-2a3f-44ea-a7c0-3b279b2d70d6:fd194f8473794e0ef1f5e41ad52fd95b3a9c83fc"));
         var xhr = new XMLHttpRequest();
 xhr.withCredentials = true;
 
@@ -12,6 +12,8 @@ xhr.addEventListener("readystatechange", function() {
 
 xhr.open("GET", "https://int-api.mx.com/users?page=%3Cinteger%3E&records_per_page=%3Cinteger%3E");
 xhr.setRequestHeader("Accept", "application/vnd.mx.api.v1+json");
+xhr.setRequestHeader("Access-Control-Allow-Origin", "https://munazzar.github.io/");
+
 xhr.setRequestHeader("Authorization", "Basic NDdiZmQzNTAtMmEzZi00NGVhLWE3YzAtM2IyNzliMmQ3MGQ2OmZkMTk0Zjg0NzM3OTRlMGVmMWY1ZTQxYWQ1MmZkOTViM2E5YzgzZmM=");
 
 xhr.send();
