--- a/apicall.html
+++ b/apicall.html
@@ -13,8 +13,8 @@ xhr.addEventListener("readystatechange", function() {
 xhr.open("GET", "https://int-api.mx.com/users?page=%3Cinteger%3E&records_per_page=%3Cinteger%3E");
 xhr.setRequestHeader("Accept", "application/vnd.mx.api.v1+json");
 xhr.setRequestHeader("Access-Control-Allow-Origin", "https://munazzar.github.io/");
-xhr.setRequestHeader("Access-Control-Allow-Methods": "GET");
-xhr.setRequestHeader("Access-Control-Allow-Headers": "Content-Type, Authorization");
+xhr.setRequestHeader("Access-Control-Allow-Methods", "GET");
+xhr.setRequestHeader("Access-Control-Allow-Headers", "Content-Type, Authorization");
 
 xhr.setRequestHeader("Authorization", "Basic NDdiZmQzNTAtMmEzZi00NGVhLWE3YzAtM2IyNzliMmQ3MGQ2OmZkMTk0Zjg0NzM3OTRlMGVmMWY1ZTQxYWQ1MmZkOTViM2E5YzgzZmM=");
 
