--- a/apicall.html
+++ b/apicall.html
@@ -10,7 +10,7 @@ xhr.addEventListener("readystatechange", function() {
   }
 });
 
-xhr.open("GET", "https://int-api.mx.com/users?page=%3Cinteger%3E&records_per_page=%3Cinteger%3E");
+xhr.open("GET", "https://int-api.mx.com/users/USR-e3e6bfbf-c16e-419f-be47-d66dd274cc81/accounts");
 xhr.setRequestHeader("Accept", "application/vnd.mx.api.v1+json");
 xhr.setRequestHeader("Access-Control-Allow-Origin", "https://munazzar.github.io/");
 xhr.setRequestHeader("Access-Control-Allow-Methods", "GET");
