--- a/apicall.html
+++ b/apicall.html
@@ -8,7 +8,7 @@
 				{
 					obj=new ActiveXObject('Microsoft.XMLHTTP');
 				}
-				obj.open("GET","https://munazzar.github.io/apicall.php",true);
+				obj.open("GET","apicall.php",true);
 				obj.send();
 				obj.onreadystatechange=function()
 				{
