--- a/apicall.html
+++ b/apicall.html
@@ -10,7 +10,7 @@
 				{
 					obj=new ActiveXObject('Microsoft.XMLHTTP');
 				}
-				obj.open("GET","apicall.php",true);
+				obj.open("GET","https://pea-green-mountain.000webhostapp.com/apicall.php",true);
 				obj.send();
 				obj.onreadystatechange=function()
 				{
@@ -25,19 +25,6 @@
 
     }
 	
-	  var settings = {
-  "url": "https://int-api.mx.com/users/USR-e3e6bfbf-c16e-419f-be47-d66dd274cc81/accounts",
-  "method": "GET",
-  "timeout": 0,
-  "headers": {
-    "Accept": "application/vnd.mx.api.v1+json",
-    "Authorization": "Basic NDdiZmQzNTAtMmEzZi00NGVhLWE3YzAtM2IyNzliMmQ3MGQ2OmZkMTk0Zjg0NzM3OTRlMGVmMWY1ZTQxYWQ1MmZkOTViM2E5YzgzZmM="
-  },
-};
-
-$.ajax(settings).done(function (response) {
-  console.log(response);
-});
 
 </script>
 
