--- a/fintech/fifthpage.html
+++ b/fintech/fifthpage.html
@@ -16,7 +16,7 @@
     <div class="main">
 
   
-        <div class="sidebar" id="mySidebar" >
+        <div class="sidebar sidebar2" id="mySidebar" >
           <div style="text-align:right ;" onclick="sideBar()">
       
             <i class="fa fa-bars" aria-hidden="true" style="font-size:35px;padding: 5px;" ></i>
@@ -26,11 +26,11 @@
           <pre id="api_output"></pre>
           
         </div>
-        <div class="second " id="second">
+        <div class="second second2" id="second">
             <div class="nav-bar" id="nav-bar"></div>
     <div class="banner">
       <div  id="banner" class="banner-show">
-       <img src="assets/banner-2.jpg">
+       <img src="assets/banner-4.jpg">
        <h1 class="banner-hdr" id="banner-hdr">Personal Loan</h1>
        <p class="banner-txt" id="banner-txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        <button class="banner-btn" id="apply-now">Apply Now</button>
