--- a/fintech/secondpage.html
+++ b/fintech/secondpage.html
@@ -369,7 +369,7 @@ window.adobeDataLayer.push({
             "name":"creditcard-application-form"
                      },
 "formStep": {
-            "name":"personal-details",                
+            "name":"Employment-details",                
             "number":"2",                        
             "step1": {
                     "value":1
