--- a/fintech/thankyou.html
+++ b/fintech/thankyou.html
@@ -83,7 +83,7 @@ window.onload=function(){
             "type":"application-form",
             "name":"creditcard-application-form",
             "status":"Processed",
-            "refNumber":"12345678"
+            "refNumber":"GTSJDB3324DSF"
                      },
 "formStep": {
             "name":"thank-you",                
