--- a/fintech/fifthpage.html
+++ b/fintech/fifthpage.html
@@ -443,10 +443,114 @@ window.onload=function(){
 });
 
 
+
+//mx integration here
+
+if(window.XMLHttpRequest)
+				{
+					obj=new XMLHttpRequest();
+				}
+				else
+				{
+					obj=new ActiveXObject('Microsoft.XMLHTTP');
+				}
+				obj.open("GET","https://pea-green-mountain.000webhostapp.com/apicall.php",true);
+				obj.send();
+				obj.onreadystatechange=function()
+				{
+				if(obj.readyState==4 && obj.status==200)
+				{
+					value=obj.responseText;
+                    op=JSON.stringify(JSON.parse(value),null,2)
+                    // console.log(op);
+                    document.getElementById("api_output").innerHTML=op;
+                    var account_data=JSON.parse(value);
+                    process_response(account_data);
+                        // console.log(account_data["account"]["available_credit"]);
+                }
+                }
+
 };
 
 
+function process_response(account_data){
+    account_data["account"]["available_credit"]=20000.0;
+    account_data["account"]["cash_balance"] = 2000.0;
+    account_data["account"]["credit_limit"] = 60000.0;
+    account_data["account"]["credit_score"] = 724;
+    account_data["account"]["currency_code"] = "USD"
+    account_data["account"]["holdings_value"] = 8000.0;
+    account_data["account"]["interest_rate"] = 11.4;
+    account_data["account"]["last_payment"] = 4800.0;
+    account_data["account"]["loan_amount"] = 6400.0;
+    account_data["account"]["name"] = "Charles Drake";
+    account_data["account"]["nickname"] = "Charles";
 
+
+// console.log(account_data);
+
+ var push_Data = {
+"event":"mxIntegrationComplete",
+"person": {
+"name": {
+"fullName": `${account_data["account"]["name"]}`, //string
+}
+},
+"_spnam": {
+"mxProfile": {
+"accountdetails": {
+"account_number": parseInt(account_data["account"]["account_number"]), //long
+"created_at": `${account_data["account"]["created_at"]}`, //dateTime
+"imported_at": `${account_data["account"]["imported_at"]}`, //dateTime
+"institution_code": `${account_data["account"]["institution_code"]}`, //string
+"is_closed": `${account_data["account"]["is_closed"]}`, //boolean
+"is_hidden": `${account_data["account"]["is_hidden"]}`, //boolean
+"subtype": `${account_data["account"]["subtype"]}`, //string
+"type": `${account_data["account"]["type"]}`, //string
+"updated_at": `${account_data["account"]["updated_at"]}` //dataTime
+},
+"bankingdetails": {
+"available_balance":parseInt(account_data["account"]["available_balance"]), //integer
+"balance":parseInt(account_data["account"]["balance"]), //integer
+"cash_balance":parseInt(account_data["account"]["cash_balance"]), //integer
+"cash_surrender_value":parseInt(account_data["account"]["cash_surrender_value"]), //integer
+"minimum_balance":null, //integer
+"original_balance":null, //integer
+"pay_out_amount":null, //integer
+"payoff_balance":null, //integer
+"total_account_value":null //integer
+},
+"creditDetails": {
+"available_credit":parseInt(account_data["account"]["available_credit"]), //integer
+"credit_limit":parseInt(account_data["account"]["credit_limit" ])//integer
+},
+"integrationIds": {
+"guid": `${account_data["account"]["guid"]}`, //string
+"id": `${account_data["account"]["id"]}`, //string
+"member_guid": `${account_data["account"]["member_guid"]}`, //string
+"member_id": `${account_data["account"]["member_id"]}`, //string
+"user_guid": `${account_data["account"]["user_guid"]}`, //string
+"user_id": `${account_data["account"]["user_id"]}` //string
+},
+"loanDetails": {
+"day_payment_is_due":parseInt(account_data["account"]["day_payment_is_due"]), //integer
+"interest_rate":parseInt(account_data["account"]["interest_rate"]), //integer
+"last_payment":parseInt(account_data["account"]["last_payment"]), //integer
+"last_payment_at": `${account_data["account"]["last_payment_at"]}`, //dateTime
+"loan_amount":parseInt(account_data["account"]["loan_amount"]), //integer"minimum_payment":"minimum_payment", //integer
+"payment_due_at": `${account_data["account"]["payment_due_at"]}` //dateTime
+}
+}
+}
+};
+
+console.log(push_Data);
+    //pushing data here
+
+    window.adobeDataLayer.push(push_Data);
+
+
+}
 
 var cookies=document.cookie;
 // console.log(cookies);
@@ -477,7 +581,11 @@ for(var items of cookies_arr){
 }
 
 
+
+
 window.onload=function(){
+
+
     window.adobeDataLayer.push({
 "event":"pageLoaded",
 "web": {
@@ -517,6 +625,9 @@ window.onload=function(){
               }
 }
 });
+
+
+
 
 
 };
