--- a/fintech/fifthpage.html
+++ b/fintech/fifthpage.html
@@ -467,7 +467,7 @@ if(window.XMLHttpRequest)
                     
                     var account_data=JSON.parse(value);
                     process_response(account_data);
-                        
+                        // console.log(account_data["account"]["available_credit"]);
                 }
                 }
 
