--- a/fintech/fifthpage.html
+++ b/fintech/fifthpage.html
@@ -556,7 +556,7 @@ function process_response(account_data){
     "email": [ {
         "id": `${email}`,                //Dynamic mail ID from the Application
         "authenticatedState": "ambiguous",
-        "primary": true
+        "primary": false
             } ],
     "mxguid": [ {
         "id": `${account_data["account"]["guid"]}`,                //Dynamic guid from the MX Response
