--- a/fintech/fifthpage.html
+++ b/fintech/fifthpage.html
@@ -514,6 +514,9 @@ function process_response(account_data){
 "fullName": `${account_data["account"]["name"]}`, //string
 }
 },
+"personalEmail": {
+"address":`${email}` // string
+},
 "_spnam": {
 "mxProfile": {
 "accountdetails": {
