--- a/simon/index.html
+++ b/simon/index.html
@@ -32,7 +32,7 @@
 
 <!-- <button class="tool-tip" >Tool Tip</button> -->
   
-  <h1 id="level-title">Touch to Start</h1> 
+  <h1 id="level-title">Click me to start</h1> 
   <div class="container">
     
     <div lass="row">
