--- a/pwa/index.html
+++ b/pwa/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-<h1 style="color: green;">
-	GeeksforGeeks</h1>
+<a href="drug-interact.html"><h1 style="color: green;">
+	GeeksforGeeks</h1></a>
 
 
 <p>
