--- a/pwa/index.html
+++ b/pwa/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<style>
+    body{
+        margin:0px;
+        padding:0px;
+    }
+</style>
 <!-- Responsive -->
 <meta charset="utf-8">
 <meta name="viewport"
@@ -27,14 +32,8 @@
 </head>
 
 <body>
-<a href="drug-interact.html"><h1 style="color: green;">
-	GeeksforGeeks</h1></a>
+<a href="signin.html"><img src="images/login.png"></a>
 
-
-<p>
-	This is a simple tutorial for
-	creating a PWA application.
-</p>
 
 
     
