--- a/pwa/notify2.html
+++ b/pwa/notify2.html
@@ -6,6 +6,10 @@
         margin:0px;
         padding:0px;
     }
+    img{
+        width: 100%;
+        height: 100%;
+    }
 </style>
 </head>
 
