--- a/pwa/notify.html
+++ b/pwa/notify.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <a href="notify2.html"><img src="images/Notification screen.png"></a>
+    <a href="notify2.html"><img src="images/Notification Screen.png"></a>
 </body>
 
 </html>
