--- a/pwa/notify2.html
+++ b/pwa/notify2.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <a href="dip1.html"><img src="images/Notification screen1.png"></a>
+    <a href="dip1.html"><img src="images/Notification Screen1.png"></a>
 </body>
 
 </html>
