--- a/pwa/accountscreen.html
+++ b/pwa/accountscreen.html
@@ -6,15 +6,25 @@
         margin:0px;
         padding:0px;
     }
-    img{
-        width: 100%;
-        height: 100%;
-    }
+    * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
 </style>
 </head>
 
 <body>
-    <a href="connectdevice.html"><img src="images/AccountScreen.png"></a>
+    <div class="imgbox">
+    <a href="connectdevice.html"><img class="center-fit"  src="images/AccountScreen.png"></a></div>
 </body>
 
 </html>
