--- a/pwa/dip1c.html
+++ b/pwa/dip1c.html
@@ -6,15 +6,26 @@
         margin:0px;
         padding:0px;
     }
-    img{
-        width: 100%;
-        height: 100%;
-    }
+    * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
 </style>
 </head>
 
 <body>
-    <a href="notify3.html"><img src="images/Drug Injection Process Flow1c.png"></a>
+    <div class="imgbox">
+    <a href="notify3.html"><img class="center-fit"  src="images/Drug Injection Process Flow1c.png"></a>
+    </div>
 </body>
 
 </html>
