--- a/pwa/index.html
+++ b/pwa/index.html
@@ -6,10 +6,19 @@
         margin:0px;
         padding:0px;
     }
-    img{
-        width: 100%;
-        height: 100%;
-    }
+    * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
 </style>
 <!-- Responsive -->
 <meta charset="utf-8">
@@ -36,8 +45,9 @@
 </head>
 
 <body>
-<a href="signin.html"><img src="images/login.png"></a>
-
+    <div class="imgbox">
+<a href="signin.html"><img class="center-fit" src="images/login.png"></a>
+</div>
 
 
     
