--- a/pwa/bpreadings.html
+++ b/pwa/bpreadings.html
@@ -6,25 +6,14 @@
         margin:0px;
         padding:0px;
     }
-    * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }
+    img{
+        width: 100%;
+    }
 </style>
 </head>
 
 <body>
-    <div class="imgbox">
-    <a href="notify.html"><img class="center-fit"  src="images/BP Readings.png"></a></div>
+    <a href="notify.html"><img src="images/BP Readings.png"></a>
 </body>
 
 </html>
