--- a/pwa/signin.html
+++ b/pwa/signin.html
@@ -6,26 +6,16 @@
         margin:0px;
         padding:0px;
     }
-    * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }
+    img{
+        width: 100%;
+    }
 </style>
 </head>
 
 <body>
-    <div class="imgbox">
-        <a href="homescreen.html"><img class="center-fit"  src="images/signin.png"></a>
-        </div>
+    
+        <a href="signin.html"><img  src="images/signin.png"></a>
+    
 </body>
 
 </html>
