--- a/pwa/accountscreen.html
+++ b/pwa/accountscreen.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="connectdevice.html"><img src="images/AccountScreen.png"></a>
+    <a href="connectdevice.html"><img src="images/AccountScreen.jpg"></a>
 </body>
 
 </html>
