--- a/pwa/bpreadings.html
+++ b/pwa/bpreadings.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="notify.html"><img src="images/BP Readings.png"></a>
+    <a href="notify.html"><img src="images/BP Readings.jpg"></a>
 </body>
 
 </html>
