--- a/pwa/connectdevice.html
+++ b/pwa/connectdevice.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="connectdevice2.html"><img src="images/Connect a device.png"></a>
+    <a href="connectdevice2.html"><img src="images/Connect a device.jpg"></a>
 </body>
 
 </html>
