--- a/pwa/connectdevice2.html
+++ b/pwa/connectdevice2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="data.html"><img src="images/Connect a device2.png"></a>
+    <a href="data.html"><img src="images/Connect a device2.jpg"></a>
 </body>
 
 </html>
