--- a/pwa/dip1a.html
+++ b/pwa/dip1a.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="dip1b.html"><img src="images/Drug Injection Process Flow1a.png"></a>
+    <a href="dip1b.html"><img src="images/Drug Injection Process Flow1a.jpg"></a>
 </body>
 
 </html>
