--- a/pwa/index.html
+++ b/pwa/index.html
@@ -46,7 +46,7 @@
 
 <body>
     <div class="imgbox">
-<a href="signin.html"><img class="center-fit" src="images/login.png"></a>
+<a href="signin.html"><img class="center-fit" src="images/login.jpg"></a>
 </div>
 
 
