--- a/pwa/data.html
+++ b/pwa/data.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="bpreadings.html"><img src="images/Data.png"></a>
+    <a href="bpreadings.html"><img src="images/Data.jpg"></a>
 </body>
 
 </html>
