--- a/pwa/dip1.html
+++ b/pwa/dip1.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="dip1a.html"><img src="images/Drug Injection Process Flow1.png"></a>
+    <a href="dip1a.html"><img src="images/Drug Injection Process Flow1.jpg"></a>
 </body>
 
 </html>
