--- a/pwa/dip1b.html
+++ b/pwa/dip1b.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="dip1c.html"><img src="images/Drug Injection Process Flow1b.png"></a>
+    <a href="dip1c.html"><img src="images/Drug Injection Process Flow1b.jpg"></a>
 </body>
 
 </html>
