--- a/pwa/dip1c.html
+++ b/pwa/dip1c.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="notify3.html"><img src="images/Drug Injection Process Flow1c.png"></a>
+    <a href="notify3.html"><img src="images/Drug Injection Process Flow1c.jpg"></a>
 </body>
 
 </html>
