--- a/pwa/homescreen.html
+++ b/pwa/homescreen.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="accountscreen.html"><img src="images/HomeScreen.png"></a>
+    <a href="accountscreen.html"><img src="images/HomeScreen.jpg"></a>
 </body>
 
 </html>
