--- a/pwa/notify.html
+++ b/pwa/notify.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="notify2.html"><img src="images/Notification Screen.png"></a>
+    <a href="notify2.html"><img src="images/Notification Screen.jpg"></a>
 </body>
 
 </html>
