--- a/pwa/notify2.html
+++ b/pwa/notify2.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="dip1.html"><img src="images/Notification Screen1.png"></a>
+    <a href="dip1.html"><img src="images/Notification Screen1.jpg"></a>
 </body>
 
 </html>
