--- a/pwa/notify3.html
+++ b/pwa/notify3.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="index.html"><img src="images/Notification Screen-1.png"></a>
+    <a href="index.html"><img src="images/Notification Screen-1.jpg"></a>
 </body>
 
 </html>
