--- a/pwa/signin2.html
+++ b/pwa/signin2.html
@@ -14,7 +14,7 @@
 
 <body>
     
-        <a href="signin2.html"><img  src="images/signin.jpg"></a>
+        <a href="homescreen.html"><img  src="images/signin2.png"></a>
     
 </body>
 
