--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                  <a href="product.html"><div class="text-center product-img my-5"><img src="assets/Best-Scanner-June-22-update-Hero-1.avif" alt="Product" width="100%" /></div></a>
+                  <a href="product.html"><div class="text-center product-img my-5"><img src="assets/Home_Background.png" alt="Product" width="100%" /></div></a>
                 </div>
                 
             </div>
