--- a/product-pdf.html
+++ b/product-pdf.html
@@ -176,7 +176,7 @@
                       <div id="adobe-dc-view1"></div>
                       
                      
-                      <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+                      <script src="https://documentcloud.adobe.com/view-sdk/viewer.js"></script>
                       <script type="text/javascript">
 document.addEventListener("adobe_dc_view_sdk.ready", function () {
 var adobeDCView = new AdobeDC.View({
@@ -186,7 +186,7 @@ divId: "adobe-dc-view1"
 adobeDCView.previewFile({
 content: {
    location: {
-      url: "PDA_Brochure_Demo.pdf"
+      url: "https://munazzar.github.io/PDA_Brochure_Demo.pdf"
    }
 },
 metaData: {
