--- a/fintech/secondpage.html
+++ b/fintech/secondpage.html
@@ -29,7 +29,7 @@
                     <div>
                         <i class="fa fa-bars"  onclick="sideBar()" aria-hidden="true" style="font-size:35px;padding: 5px; color:white;" ></i>
                     </div>
-                    <a href="https://nextrow-publish.adobesandbox.com/content/nr_finance/us/en.html">
+                    <a href="http://34.70.159.58:4503/content/nr_finance/us/en.html">
                         <div class="nav_left_logo">
                          <p style="text-decoration:none!important">NR.<span class="red-text">FINANCE</span></p>
                         </div>
