--- a/photography/index.html
+++ b/photography/index.html
@@ -17,7 +17,7 @@
         <div class="profile-picture">
             <img src="profile.jpg" alt="Profile Picture">
         </div>
-        <h2>Munazzaruddin Mohammed</h2>
+        <h2>Munazzar</h2>
         <div class="contact-links">
             <a href="https://instagram.com/mdmunazzar" target="_blank">Instagram</a>
             <a href="mailto:youremail@example.com">mdmunazzar@gmail.com</a>
