--- a/photography/index.html
+++ b/photography/index.html
@@ -6,6 +6,9 @@
     <title>Munazzar's Portfolio Galleria</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Macondo&family=Ms+Madi&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="portfolio-header">
@@ -19,9 +22,8 @@
         </div>
         <h2>Munazzar</h2>
         <div class="contact-links">
-            <a href="https://instagram.com/mdmunazzar" target="_blank">Instagram</a>
-            <a href="mailto:youremail@example.com">mdmunazzar@gmail.com</a>
-            <p>Phone: +331 814 9359</p>
+            <a href="mailto:mdmunazzar@gmail.com">mdmunazzar@gmail.com</a>
+
         </div>
     </section>
 
